Binary expression support for compiler
BinaryExpression, BinaryExpressioBuilder, BinaryOperation