@@ -62,6 +62,8 @@
 						--add-opens
 						javamm.code/com.revenat.javamm.code.fragment.expression=ALL-UNNAMED
 						--add-opens
+						javamm.code/com.revenat.javamm.code.fragment.operator=ALL-UNNAMED
+						--add-opens
 						javamm.code/com.revenat.javamm.code.syntax=ALL-UNNAMED
 					</argLine>
 				</configuration>
