@@ -68,6 +68,8 @@
 						--add-opens
 						javamm.compiler/com.revenat.javamm.compiler.component.impl.operation.simple=ALL-UNNAMED
 						--add-opens
+						javamm.compiler/com.revenat.javamm.compiler.component.impl.expression.builder=ALL-UNNAMED
+						--add-opens
 						javamm.compiler/com.revenat.javamm.compiler.component.impl.util=ALL-UNNAMED
 					</argLine>
 				</configuration>
